--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="menu flex">
           <div>
             <a href="./index.html" target="_self"></a>
-            <img src="./images/icon-moon.svg" alt="" class="dark-mode" />
-            <img src="./images/icon-sun.svg" alt="" class="light-mode hidden" />
+            <img src="./images/icon-moon.svg" alt="" class="dark-mode hidden" />
+            <img src="./images/icon-sun.svg" alt="" class="light-mode" />
           </div>
-          <p class="menu-title">Dark Mode</p>
+          <p class="menu-title">Light Mode</p>
           <a href="" target="_self"></a>
         </div>
       </div>
@@ -47,7 +47,7 @@
       </section>
       <section class="country-section flex">
         <div class="country-data flex"></div>
-        <div class="selected-country container show-selected"></div>
+        <div class="selected-country container"></div>
       </section>
     </main>
     <script src="./script.js"></script>
