--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@
           placeholder="Seach a country..."
         />
         <select name="region" id="region" class="box">
-          <option value="filterRegion">Filter by Region</option>
+          <option value="filterRegion" selected disabled>
+            Filter by Region
+          </option>
           <option value="Africa">Africa</option>
           <option value="Americas">America</option>
           <option value="Asia">Asia</option>
           <option value="Europe">Europe</option>
           <option value="Oceania">Oceania</option>
+          <option value="All">All</option>
         </select>
       </section>
       <section class="country-section flex">
