--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <script defer type="module" src="./src/script.js"></script>
   </head>
   <body>
     <nav class="box">
@@ -53,6 +54,5 @@
         <div class="selected-country container"></div>
       </section>
     </main>
-    <script src="./script.js"></script>
   </body>
 </html>
