--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <script defer type="module" src="./src/script.js"></script>
+    <script defer type="module" src="./src/controller.js"></script>
   </head>
   <body>
     <nav class="box">
